Updates from Claire's proofreading

--- a/src/files/dramae.css
+++ b/src/files/dramae.css
@@ -800,6 +800,10 @@ tei-l:hover simple-icon-button-lite {
   /* Empty Rule Set */
   visibility: visible;
 } 
+tei-l [rend="center"] {
+  display: inline-block;
+  text-align: center;
+}
 tei-lg > tei-l:first-of-type {
   display: block;
   padding-left: 0em;
@@ -1666,7 +1670,6 @@ tei-stage {
   font-style: italic;
 }
 tei-stage:not([place]){
-  color:purple;
   display: inline-block;
   margin-right:0px;
 }
